added Sass and some styling

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset='UTF-8')
-    link(rel='stylesheet', href='../stylesheets/styles.css')
+    link(rel='stylesheet', href='../stylesheets/index.css')
     title TODO List
 
   body
